# murmur

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
scripts/: dictate-toggle.sh  murmur-toggle.sh
src/dictation/: client.py  config.py  daemon.py  transcribe.py
src/murmur/: client.py  config.py  daemon.py  transcribe.py
systemd/: dictation.service  murmur.service
tests/: test_client.py  test_config.py  test_daemon.py  test_integration.py  test_transcribe.py
