[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dictation"
version = "0.1.0"
description = "Hotkey-triggered voice dictation for Wayland using faster-whisper"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
dictation-daemon = "dictation.daemon:main"
dictation-client = "dictation.client:main"

[tool.setuptools.packages.find]
where = ["src"]
